--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,32 @@
 </head>
 <body>
   <h1>Welcome to URL Shortener Service</h1>
+  <% if (locals.error) { %>
+    <p class="error"><%= error %></p>
+    <% } %>
+
+    <form action="/shorten" method="post">
+      <input type="url" name="url" id="url" placeholder="url here..." />
+      <input type="submit" value="create url" href="index1.ejs"/>
+     
+      <div class="short-url">
+        <% if (locals.short_url) { %>
+        <a href="<%= short_url %>"><%= short_url %> </a>
+        <% } %>
+    <div/>
+    
+  
+      
+    </form>
+    <form action="/" method="get">
+      <input type="submit" value="Shorten another url" />
+    </form>
+    
+    
+    
+  
+    
+    
+  
 </body>
 </html>
