--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,26 +14,8 @@
 
     <form action="/shorten" method="post">
       <input type="url" name="url" id="url" placeholder="url here..." />
-      <input type="submit" value="create url" href="index1.ejs"/>
-     
-      <div class="short-url">
-        <% if (locals.short_url) { %>
-        <a href="<%= short_url %>"><%= short_url %> </a>
-        <% } %>
-    <div/>
-    
-  
-      
+      <input type="submit" value="Submit" href="index1.ejs"/>  
     </form>
-    <form action="/" method="get">
-      <input type="submit" value="Shorten another url" />
-    </form>
-    
-    
-    
-  
-    
-    
-  
+ 
 </body>
 </html>
