--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -13,10 +13,9 @@
         <% if (locals.short_url) { %>
         <a href="<%= short_url %>"><%= short_url %> </a>
         <% } %>
-    <div/>
-        </br>
-
+    </div>
+    </br>
     <form action=" /" method="get">
-        <input type="submit" value="Shorten another url" />
-      </form>
+      <input type="submit" value="Shorten another url" />
+    </form>
 </body>
